@@ -5,6 +5,12 @@
   more portable than a script record.
 - Add -e/--evemu-events=devname=eventsfilename option to umockdev-run, to load
   an evemu .events file. (Issue #5)
+- Add umockdev_in_mock_environment(). This function returns whether
+  or not the current process is running in a umockdev testbed
+  environment. Thanks Chris Halse Rogers!
+- Only send a "add" uevent from add_device if running in a umockdev
+  testbed environment. Fixes error messages when loading devices from
+  the umockdev-run commandline. Thanks Chris Halse Rogers!
 
 0.7 (2014-03-05)
 ----------------
